[package]
name = "iced-material"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
palette = "*"
freedesktop-icons = "*"

[dependencies.iced]
#git = "https://github.com/ibaryshnikov/iced.git"
#rev = "901bbeb"
features = ["wgpu","lazy","svg","advanced","markdown","highlighter"]
git = "https://github.com/jedugsem/iced"

[dependencies.iced_winit]
#git = "https://github.com/ibaryshnikov/iced.git"
#rev = "901bbeb"
git = "https://github.com/jedugsem/iced"


[dependencies.iced_wgpu]
#git = "https://github.com/ibaryshnikov/iced.git"
#rev = "901bbeb"
git = "https://github.com/jedugsem/iced"

#iced = {git="https://github.com/iced-rs/iced",features=["lazy","svg","advanced"]}
